@@ -1,5 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
+dbus1systemdir = $(sysconfdir)/dbus-1/system.d
+dist_dbus1system_DATA = \
+	Upstart.conf
+
+
 EXTRA_DIST = \
 	com.ubuntu.Upstart.xml \
 	com.ubuntu.Upstart.Job.xml \
