@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE busconfig PUBLIC
+  "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
+  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
+
+<busconfig>
+  <!-- Only the root user can own the Upstart name -->
+  <policy user="root">
+    <allow own="com.ubuntu.Upstart" />
+  </policy>
+
+  <!-- Do not allow anyone to invoke methods on Upstart, its jobs or their
+       instances. -->
+  <policy context="default">
+    <deny send_interface="com.ubuntu.Upstart" />
+    <deny send_interface="com.ubuntu.Upstart.Job" />
+    <deny send_interface="com.ubuntu.Upstart.Instance" />
+  </policy>
+
+  <!-- But do allow the root user -->
+  <policy user="root">
+    <allow send_interface="com.ubuntu.Upstart" />
+    <allow send_interface="com.ubuntu.Upstart.Job" />
+    <allow send_interface="com.ubuntu.Upstart.Instance" />
+  </policy>
+</busconfig>
