@@ -1,5 +1,9 @@
 2008-05-09  Scott James Remnant  <scott@netsplit.com>
 
+	* dbus/Upstart.conf: Add configuration file.
+	* dbus/Makefile.am (dbussystemdir, dist_dbussystem_DATA): Install
+	the configuration file into the right place.
+
 	* dbus/com.ubuntu.Upstart.xml (GetJobByName): Add method
 	* init/control.c (control_get_job_by_name): Implementation.
 	* init/control.h: Prototype.
